compiler/driver/tests/snapshots/fixtures__m3-generics__errors__missing-return.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m3-generics/errors/missing-return.scoop:1:14: error: non-Unit function `f` must end with a return statement
