compiler/driver/tests/snapshots/fixtures__m3-generics__errors__none-no-context.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m3-generics/errors/none-no-context.scoop:2:13: error: cannot infer the type of `None`
