compiler/driver/tests/snapshots/fixtures__m3-generics__errors__null-assert-non-option.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m3-generics/errors/null-assert-non-option.scoop:3:13: error: `!!` requires an Option operand, found Int
