compiler/driver/tests/snapshots/fixtures__m3-generics__errors__print-generic.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m3-generics/errors/print-generic.scoop:2:13: error: argument of `println` must be String, Int or Boolean, found T
