compiler/driver/tests/snapshots/fixtures__m3-generics__errors__safe-on-non-option.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m3-generics/errors/safe-on-non-option.scoop:5:13: error: `?.` requires an Option receiver, found Point
